fix overflow, set up mediaqueries for large screens fullscreen mode

--- a/src/pages/stream.css
+++ b/src/pages/stream.css
@@ -1,10 +1,8 @@
 .stream-page {
   height: 100%;
-  background-image: url(../images/stream.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 0em 0.1em 0.1em 0.1em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -44,6 +42,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  overflow: hidden;
 }
 
 .button {
@@ -57,15 +56,12 @@
   .button {
     position: relative;
     top: 93%;
-    left: -26%;
+    left: -23%;
     z-index: 2;
   }
   .center-it {
     height: 60%;
     width: 90%;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
   }
 }
 
@@ -79,9 +75,6 @@
   .center-it {
     height: 60%;
     width: 90%;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
   }
 }
 
@@ -89,9 +82,6 @@
   .center-it {
     height: 60%;
     width: 90%;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
   }
   .button {
     position: relative;
@@ -112,7 +102,7 @@
   .button {
     position: relative;
     top: 64%;
-    left: -25%;
+    left: -15%;
     z-index: 2;
   }
 }
@@ -124,38 +114,4 @@
     left: -30%;
     z-index: 2;
   }
-}
-
-.vimeo-container {
-  height: 500px;
-  width: 800px;
-  padding: 06.25% 0 0 0;
-  position: relative;
-}
-
-.vimeo-player {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.video-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px;
-  height: 0;
-  top: 0;
-  overflow: hidden;
-}
-
-.video-container iframe,
-.video-container object,
-.video-container embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
